--- a/final/v2/package.json
+++ b/final/v2/package.json
@@ -17,8 +17,8 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
+    "2d-geometry": "^3.0.0",
     "lodash": "^4.17.21",
     "p5": "^1.11.0"
   }
 }
-
