--- a/final/v2/package.json
+++ b/final/v2/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "2d-geometry": "^3.0.0",
+    "@types/dat.gui": "^0.7.13",
+    "dat.gui": "^0.7.9",
     "lodash": "^4.17.21",
     "p5": "^1.11.0"
   }
